# Osprey

./: CMakeLists.txt  README.md  vcpkg.json
shaders/: ground_grid.slang  horizon_gradient.slang  main_shader.slang  steel_material_shader.slang
src/: camera.cpp  camera.h  camera_component.cpp  camera_component.h  component.cpp  component.h  constants.h  curve.h  entity.cpp  entity.h  frame.cpp  frame.h  future_utils.h  gpu_buffer.h  hermite_curve.h  image.cpp  image.h  main.cpp  memory_utils.h  mesh.h  mesh_component.h  node_editor.h  nurbs_curve.h  piecewise_linear_curve.h  pipeline.cpp  pipeline.h  render_attachments.cpp  render_attachments.h  render_graph.cpp  render_graph.h  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  swapchain.cpp  swapchain.h  track.h  track_mesh.h  transform_component.cpp  transform_component.h  (+2 more)
tracks/: accuratelySized.yaml  bigDrop.yaml  coolCircuit.yaml  coolCircuit2.yaml  newTrack.yaml  nodeSystemTest.yaml  track1.yaml  track2.yaml  twisty.yaml
